# yolo26-gui

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
gui/: backend_worker.py  main_window.py
scripts/: check_dataset.py  evaluate_dataset.py  model_convert.py  predict.py  predict_video.py
src/yolo26_gui/: __init__.py  __main__.py  app.py
tests/: test_app.py
